<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/cardbackgroundcolor"
    android:padding="16dp">
    <TextView
        android:textColor="?attr/textcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Transacao" />

    <EditText
        android:id="@+id/edtNomeTransacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/textcolor"
        android:hint="@string/Transacao"
        android:inputType="textCapWords"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/texthintcolor"/>

    <TextView
        android:textColor="?attr/textcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Valor" />

    <EditText
        android:id="@+id/edtValorTransacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/textcolor"
        android:hint="@string/ValorRS"
        android:inputType="number"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/texthintcolor"/>
    <info.hoang8f.widget.FButton
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnAddTransacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adicionar"
        android:textColor="@android:color/white"
        app:cornerRadius="10dp"
        app:fButtonColor="@color/fbutton_color_green_sea"
        app:shadowEnabled="false" />

</LinearLayout>