<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.mathr.burb01.Fragments.BalancoFragment"
    android:background="?attr/backgroundcolor">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/txtPeriodo"
    android:layout_marginTop="16dp"
    android:textSize="22sp"
    android:textColor="?attr/textcolor"
    android:text="@string/Mes"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"/>
    <View
        style="@style/Divider"/>

        <TextView
            android:id="@+id/txtSaldoAtual"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="?attr/textcolor"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtInvestido"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="?attr/textcolor"
            android:text="@string/Investido"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
<LinearLayout
    android:weightSum="6"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="2"
            android:textSize="22sp"
            android:textColor="?attr/textcolor"
            android:text="@string/Transacoes"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
    <View
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"/>


</LinearLayout>
        <View
            android:layout_marginBottom="10dp"
            style="@style/Divider"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_transacoes"
        android:scrollbars="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addTransacao"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@android:color/white"
        app:borderWidth="0dp"
        app:rippleColor="@color/fbutton_color_green_sea"
        android:backgroundTint="@color/fbutton_color_green_sea"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="16dp"
        />

    </android.support.design.widget.CoordinatorLayout>
